fix(i18n): auditoria traduccions + menú portal i18n + no-translate
- Corregits errors ortogràfics, semàntics i de sintaxi als 8 fitxers
  de traducció (ca/es/en/de a messages/ i src/messages/)
- PortalShell: tots els labels del menú ara usen useTranslations('portalNav')
- LocaleSwitcher: 'CAT' → 'CA' (evita traducció automàtica del navegador)
- layout.tsx: translate="no" + meta notranslate per deshabilitar auto-translate
- Backend: agents multi-proveïdor (Anthropic + OpenAI-compatible),
  config IA per tenant, Vault amb serveis desactualitzats
- specs/serveis-cataleg.md: actualitzat

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>